<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController" customModule="GardenGuide" customModuleProvider="target">
            <connections>
                <outlet property="bottomLineView" destination="Xyx-kV-cKz" id="J2b-Qg-9iO"/>
                <outlet property="editGardenPlantsSwitch" destination="4Kf-cx-LKI" id="J6L-nw-c46"/>
                <outlet property="emailTextField" destination="hdz-OK-Ch6" id="8P6-u1-Jjr"/>
                <outlet property="errorLabel" destination="qjS-EC-Uop" id="bHd-R6-uM9"/>
                <outlet property="passwordTextField" destination="QhZ-Ss-wYf" id="myG-jH-3k1"/>
                <outlet property="signOutButton" destination="Poc-Wf-odg" id="mC5-Qn-dmy"/>
                <outlet property="signUpButton" destination="fc9-Cf-r3P" id="UjQ-GK-SkF"/>
                <outlet property="signUpView" destination="ejC-AA-beq" id="4ta-Zo-yRU"/>
                <outlet property="signUpViewHeight" destination="hqm-fm-zAV" id="4eB-lc-8yb"/>
                <outlet property="topLineView" destination="3b2-MO-JqC" id="ule-GL-OZt"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="VCb-p0-uYn">
                    <rect key="frame" x="20" y="132" width="353" height="31"/>
                    <subviews>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remove any plants in your Garden" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROq-iM-KeK">
                            <rect key="frame" x="0.0" y="0.0" width="271" height="31"/>
                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="4Kf-cx-LKI">
                            <rect key="frame" x="304" y="0.0" width="51" height="31"/>
                            <color key="onTintColor" name="CustomOpaqueGreen"/>
                            <connections>
                                <action selector="removeAnyPlantsInYourGarden:" destination="-1" eventType="valueChanged" id="ky1-Gb-NTz"/>
                            </connections>
                        </switch>
                    </subviews>
                </stackView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Poc-Wf-odg">
                    <rect key="frame" x="146.66666666666666" y="412" width="100" height="34"/>
                    <color key="backgroundColor" name="CustomLightGreen"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="100" id="OgX-dH-kXX"/>
                    </constraints>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                    <state key="normal" title="Sign Out"/>
                    <connections>
                        <action selector="signOut:" destination="-1" eventType="touchUpInside" id="laR-f3-Ony"/>
                    </connections>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LAV-rZ-mC7">
                    <rect key="frame" x="161.66666666666666" y="84" width="70" height="23"/>
                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                    <color key="textColor" name="CustomOpaqueGreen"/>
                    <nil key="highlightedColor"/>
                </label>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ejC-AA-beq">
                    <rect key="frame" x="0.0" y="183" width="393" height="219"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="N4R-C2-PJQ">
                            <rect key="frame" x="20" y="25" width="353" height="169"/>
                            <subviews>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hdz-OK-Ch6">
                                    <rect key="frame" x="0.0" y="0.0" width="353" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                    <connections>
                                        <action selector="editingEmailTextField:" destination="-1" eventType="editingChanged" id="zOt-60-RJ6"/>
                                    </connections>
                                </textField>
                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QhZ-Ss-wYf">
                                    <rect key="frame" x="0.0" y="45" width="353" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    <connections>
                                        <action selector="editingPasswordTextField:" destination="-1" eventType="editingChanged" id="8Bk-59-Qtp"/>
                                    </connections>
                                </textField>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qjS-EC-Uop">
                                    <rect key="frame" x="0.0" y="90" width="353" height="34"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                    <color key="textColor" name="ErrorRed"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fc9-Cf-r3P">
                                    <rect key="frame" x="0.0" y="135" width="353" height="34"/>
                                    <color key="backgroundColor" name="CustomLightGreen"/>
                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                    <state key="normal" title="Sign Up"/>
                                    <connections>
                                        <action selector="signUp:" destination="-1" eventType="touchUpInside" id="eCM-5n-yTp"/>
                                    </connections>
                                </button>
                            </subviews>
                        </stackView>
                    </subviews>
                    <color key="backgroundColor" name="CustomBackgroundColor"/>
                    <constraints>
                        <constraint firstAttribute="trailing" secondItem="N4R-C2-PJQ" secondAttribute="trailing" constant="20" id="13z-L2-HUP"/>
                        <constraint firstItem="N4R-C2-PJQ" firstAttribute="top" secondItem="ejC-AA-beq" secondAttribute="top" constant="25" id="3cq-CY-Kk9"/>
                        <constraint firstAttribute="height" constant="219" id="hqm-fm-zAV"/>
                        <constraint firstItem="N4R-C2-PJQ" firstAttribute="leading" secondItem="ejC-AA-beq" secondAttribute="leading" constant="20" id="rQN-l8-9ZR"/>
                    </constraints>
                </view>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3b2-MO-JqC">
                    <rect key="frame" x="9.6666666666666572" y="183" width="373.66666666666674" height="1"/>
                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="1" id="X1V-fn-1yV"/>
                    </constraints>
                </view>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xyx-kV-cKz">
                    <rect key="frame" x="9.6666666666666572" y="401" width="373.66666666666674" height="1"/>
                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="1" id="sML-vY-7CR"/>
                    </constraints>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" name="CustomBackgroundColor"/>
            <constraints>
                <constraint firstItem="LAV-rZ-mC7" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="25" id="3e2-Sk-jdV"/>
                <constraint firstItem="VCb-p0-uYn" firstAttribute="top" secondItem="LAV-rZ-mC7" secondAttribute="bottom" constant="25" id="3og-Qs-jGS"/>
                <constraint firstItem="Xyx-kV-cKz" firstAttribute="centerX" secondItem="ejC-AA-beq" secondAttribute="centerX" id="99D-vC-dDy"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ejC-AA-beq" secondAttribute="trailing" id="B1I-gD-Mhd"/>
                <constraint firstItem="Xyx-kV-cKz" firstAttribute="bottom" secondItem="ejC-AA-beq" secondAttribute="bottom" id="DY9-Ez-kFx"/>
                <constraint firstItem="ejC-AA-beq" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="GDh-OA-z2m"/>
                <constraint firstItem="3b2-MO-JqC" firstAttribute="top" secondItem="ejC-AA-beq" secondAttribute="top" id="KNC-WA-ePT"/>
                <constraint firstItem="Poc-Wf-odg" firstAttribute="top" secondItem="ejC-AA-beq" secondAttribute="bottom" constant="10" id="Msy-hh-jAU"/>
                <constraint firstItem="Xyx-kV-cKz" firstAttribute="width" secondItem="ejC-AA-beq" secondAttribute="width" multiplier="0.95" id="OAw-eU-liG"/>
                <constraint firstItem="LAV-rZ-mC7" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Qg2-3Q-e41"/>
                <constraint firstItem="VCb-p0-uYn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="W1P-hE-oAo"/>
                <constraint firstItem="ejC-AA-beq" firstAttribute="top" secondItem="VCb-p0-uYn" secondAttribute="bottom" constant="20" id="Xfi-re-7Qz"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="VCb-p0-uYn" secondAttribute="trailing" constant="20" id="fgt-eg-SZW"/>
                <constraint firstItem="3b2-MO-JqC" firstAttribute="centerX" secondItem="ejC-AA-beq" secondAttribute="centerX" id="iZ1-6Q-qm6"/>
                <constraint firstItem="3b2-MO-JqC" firstAttribute="width" secondItem="ejC-AA-beq" secondAttribute="width" multiplier="0.95" id="mxV-cO-wCe"/>
                <constraint firstItem="Poc-Wf-odg" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="xMM-RQ-Ije"/>
            </constraints>
            <point key="canvasLocation" x="139.69465648854961" y="19.718309859154932"/>
        </view>
    </objects>
    <resources>
        <namedColor name="CustomBackgroundColor">
            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="CustomLightGreen">
            <color red="0.41568627450980394" green="0.60784313725490191" blue="0.25490196078431371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="CustomOpaqueGreen">
            <color red="0.28627450980392155" green="0.35294117647058826" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="ErrorRed">
            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <systemColor name="opaqueSeparatorColor">
            <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
