...
               present(authMainViewController, animated: true)
            }
        }
    }
    
    private func obtainTitlesToSendMessageToUser(providerType: ProviderType, email: String) -> [String:String] {
        let title = providerType == .anonymous ? "You registered anonymously, are you sure you want to log out?" : "Sure you want to log out?"
        let subTitle = providerType == .anonymous ? "If you close the section, your data will be deleted." : "You are logged in with the account: \(email)"
        let titleAction = "Add a new account and save the data"
        
        let titles: [String:String] = ["title": title, "subTitle": subTitle, "titleAction":titleAction]
        return titles
    }
...
    private func sendMessageToUser(titles: [String:String], providerType: ProviderType, sender: UIButton){
        //create alertController
        let alertController = UIAlertController(title: titles["title"], message: titles["subTitle"], preferredStyle: .alert)
        
        //create alertActions
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel)
        let signOutAction = UIAlertAction(title: "Yes, close it", style: .default) { action in
            self.willTheLogoutSessionBeClosed()
        }
        if providerType == .anonymous {
            let signUpAction = UIAlertAction(title: titles["titleAction"], style: .default) { action in
                self.logViewStatus = .show
            }
...
