...
    func configureNavigationItems(){
        //Configure the title
        let appearance = UINavigationBarAppearance()
        appearance.titleTextAttributes = [.foregroundColor: UIColor(named: "CustomLightGreen")!]
        appearance.largeTitleTextAttributes = [.foregroundColor: UIColor(named: "CustomLightGreen")!]
        navigationItem.standardAppearance = appearance
        navigationItem.title = "GARDEN"
       
        //Setup right button
        navigationItem.rightBarButtonItem = UIBarButtonItem(image: UIImage(systemName: "gearshape"), style: .done, target: self, action: #selector(editGeneralConfiguration))
        navigationItem.rightBarButtonItem?.tintColor = .customOpaqueGreen
    }
    
    func settupCollectionView() {
        //delegate
        collectionView.delegate = self
...
